--- a/manual/proyecto/capitulos/04_Conclusiones.tex
+++ b/manual/proyecto/capitulos/04_Conclusiones.tex
@@ -1,2 +1,27 @@
 \chapter{Conclusiones}
 
+En este capítulo se explican las conclusiones que se han obtenido de este Trabajo Fin de Grado, el trabajo futuro y una valoración personal.
+
+\section{Conclusiones}
+
+A lo largo de este Trabajo Fin de Grado se ha desarrollado un simulador de escenarios con usuarios móviles para la evaluación de algoritmos de recomendaciones. El simulador puede ser usado de forma cooperativa por varias personas a través de cualquier dispositivo con conexión a Internet y un navegador web. Cuenta con escenarios basados en datos reales obtenidos a través del servicio de mapas de OpenStreetMap y permite integrar de un recomendador externo.
+
+Como se puede comprobar a continuación, se han cumplido todos los objetivos marcados inicialmente en la propuesta del Trabajo Fin de Grado:
+\begin{itemize}
+	\item Se he desarrollado un simulador de escenarios con usuarios móviles que cuenta con mapas de ciudades con objetos móviles y estáticos.
+	\item Los mapas de las ciudades utilizados en las simulaciones están creados a partir de datos reales obtenidos a través del servicio de mapas de OpenStreetMap.
+	\item Los usuarios puedan crear, editar, borrar y configurar los mapas y escenarios del simulador.
+	\item Se ha desarrollado un sistema bidireccional basada en eventos que permite integrar un recomendador externo y realizar simulaciones en tiempo real de tal forma que los eventos de los usuarios se reflejen en los dispositivos conectados al mismo mapa y escena.
+\end{itemize}
+
+\section{Trabajos futuros}
+
+A continuación se proponen algunas posibles mejoras futuras:
+
+\begin{itemize}
+	\item 
+	\item 
+	\item 		
+\end{itemize}
+
+\section{Valoración personal}
