--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -194,7 +194,7 @@ pdfproducer = {pdflatex}
 %
 \input{capitulos/04_Conclusiones}
 %
-%\input{capitulos/05_Diseno}
+%\input{capitulos/05_Bibliografia}
 %
 %\input{capitulos/06_Implementacion}
 %
