--- a/manual/proyecto/capitulos/01_Introduccion.tex
+++ b/manual/proyecto/capitulos/01_Introduccion.tex
@@ -23,7 +23,7 @@ Además de los objetivos marcados por la propuesta del Trabajo Fin de Grado, tam
 
 \section{Contexto Tecnológico}
 
-Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El inconveniente que esto conlleva es que si ejecutamos el mismo algoritmo sobre un conjunto de datos estáticos varias veces siempre obtenemos el mismo resultado. Con el fin de evitar este inconveniente surge la necesidad de evaluar los algoritmos de recomendaciones con conjuntos de datos dinámicos. 
+Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El inconveniente que esto conlleva es que solo podemos realizar un análisis sobre el comportamiento de los usuarios en el pasado perdiendo la capacidad de poder calibrar correctamente los algoritmos de recomendaciones para su correcta evaluación. Con el fin de evitar este inconveniente surge la necesidad de evaluar los algoritmos de recomendaciones con conjuntos de datos dinámicos. 
 
 Una de las formas de recolectar y proveer conjuntos de datos dinámicos es mediante el crowdsourcing. El crowdsourcing, también conocido como colaboración abierta distribuida, consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta. 
 
