--- a/manual/proyecto/capitulos/04_Conclusiones.tex
+++ b/manual/proyecto/capitulos/04_Conclusiones.tex
@@ -1,8 +1,8 @@
 \chapter{Conclusiones}
 
-En este capítulo se explican las conclusiones que se han obtenido de este Trabajo Fin de Grado, el trabajo futuro y una valoración personal.
+En este capítulo se explican los resultados que se han obtenido de este Trabajo Fin de Grado, el trabajo futuro y una valoración personal.
 
-\section{Conclusiones}
+\section{Resultados}
 
 A lo largo de este Trabajo Fin de Grado se ha desarrollado un simulador de escenarios con usuarios móviles para la evaluación de algoritmos de recomendaciones. El simulador puede ser usado de forma cooperativa por varias personas a través de cualquier dispositivo con conexión a Internet y un navegador web. Cuenta con escenarios basados en datos reales obtenidos a través del servicio de mapas de OpenStreetMap y permite integrar de un recomendador externo.
 
