--- a/manual/proyecto/prefacios/prefacio.tex
+++ b/manual/proyecto/prefacios/prefacio.tex
@@ -10,7 +10,17 @@
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
 
-Los sistemas de recomendación proporcionan sugerencias acerca de elementos que pueden resultar de interés para el usuario (hoteles, restaurantes, libros, películas, etc.). En este TFG se pretende desarrollar un simulador de escenarios con usuarios móviles (mapas de ciudades con objetos móviles y estáticos) que permita la evaluación de algoritmos de recomendación. 
+Los sistemas de recomendación proporcionan sugerencias acerca de elementos que pueden resultar de interés para el usuario como pueden ser los hoteles, restaurantes, libros, películas, lineas de taxis y autobuses etc. Habitualmente estos sistemas se evalúan con conjuntos de datos estáticos clásicos pero el inconveniente que esto conlleva es que solo podemos realizar un análisis sobre el comportamiento de los usuarios en el pasado perdiendo la capacidad de poder calibrar correctamente los algoritmos de recomendaciones para su correcta evaluación.
+
+El objetivo de este Trabajo Fin de Grado es desarrollar un simulador de escenarios con usuarios móviles que recolecte y proporciones conjuntos de datos dinámicos para la evaluación de algoritmos de recomendaciones. El sistema funciona en tiempo real y utiliza técnicas de crowdsourcing, también conocido como colaboración abierta distribuida, y consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta.
+
+La arquitectura del sistema consta de un navegador web, un servidor web Node.js, un servidor de recomendaciones y una base de datos mongoDB. Se trata de una aplicación de una sola página desarrollada con Angular.js y Node.js que nos permite configurar distintos escenarios con conjuntos de datos reales obtenidos a partir del servicio de mapas de OpenStreetMap.
+
+La integración entre los distintos componentes del sistemas está realizada de dos maneras. La primera es una REST API y el intercambio de mensajería JSON para realizar operaciones de tipo CRUD para las distintas configuraciones del simulador y la segunda es un sistema bidireccional dirigido por eventos utilizado durante las simulaciones para compartir información entre los distintos componentes del sistema sin que estos la hayan solicitado evitando mucha peticiones innecesarias y consiguiendo que las simulaciones funcionen en tiempo real.
+
+Para la gestión del proyecto se ha elegido el modelo en espiral como modelo de trabajo. Esto me ha permitido evaluar los requisitos en cada iteración y reorientar el proyecto al encontrar dificultados y limitaciones respecto a la idea principal. Esta idea consistía en desarrollar un videojuego de aventuras con Unity 5 pero a medida que se planteaba y desarrollaba el videojuego se ha detectado que el motor gráfico tiene ciertas limitaciones. Esto incrementaba considerablemente la dificultad y el tiempo del desarrollo. 
+
+Por esto como resultado final se ha desarrollado un simulador de escenarios con usuarios móviles ya que lo importante en este caso es la evaluación de algoritmos de recomendaciones.
 
 \cleardoublepage
 
