--- a/manual/proyecto/capitulos/03_GestionProyecto.tex
+++ b/manual/proyecto/capitulos/03_GestionProyecto.tex
@@ -171,7 +171,7 @@ Como ya se ha comentado anteriormente, el desarrollo del proyecto se ha realizad
 
 \begin{table}[H]
 \begin{center}
-\begin{tabular}{|p{2cm}| p{5cm}|}
+\begin{tabular}{|c|c|}
 \hline 
 \noindent{\textbf{Fase}} & \noindent{\textbf{Horas}} \\
 \hline \hline
@@ -181,9 +181,10 @@ Fase 3 & 38\\ \hline
 Fase 4 & 3.5\\ \hline
 Fase 5 & 247\\ \hline
 Fase 6 & 42.5\\ \hline
-Reuniones & 7\\ 
+Reuniones & 7\\ \hline
+Pruebas de carga & 11.5 \\ \hline
 \hline \hline
-\noindent{\textbf{Total}} & 398.5\\ \hline
+\noindent{\textbf{Total}} & \noindent{\textbf{410}} \\ \hline
 \end{tabular}
 \caption{Separación por horas de las distintas fases}
 \label{tabla:requisitosEtapa5}
